--- a/LMS.Web/App.razor
+++ b/LMS.Web/App.razor
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="LMS.Web.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="_content/Syncfusion.Blazor/styles/bootstrap5.css" rel="stylesheet" />
     <HeadOutlet />
 </head>
 
 <body>
     <Routes />
+    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
