--- a/LMS.Web/App.razor
+++ b/LMS.Web/App.razor
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <Routes @rendermode="InteractiveServer" />
     <Routes />
     <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <script src="_framework/blazor.web.js"></script>
